--- a/user/themes/tlf/assets/css/ie9.css
+++ b/user/themes/tlf/assets/css/ie9.css
@@ -1,11 +1,17 @@
 /*
+* @include triangle within a pseudo element and add positioning properties (ie. top, left)
+* $direction: up, down, left, right
+*/
+/**
+* ClearFix
+*/
+/*
 	Twenty by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-
 /* Banner */
+#banner .inner {
+  opacity: 1.0; }
 
-	#banner .inner {
-		opacity: 1.0;
-	}
+/*# sourceMappingURL=ie9.css.map */
