--- a/user/themes/tlf/templates/partials/base.html.twig
+++ b/user/themes/tlf/templates/partials/base.html.twig
@@ -10,11 +10,14 @@
 
         {% block stylesheets %}
                 {% do assets.addCss('theme://assets/css/main.css') %}
+                {% do assets.addCss('theme://assets/css/main.css.map') %}
                 {% if browser.getBrowser == 'msie' and browser.getVersion == 8 %}
                     {% do assets.addCss('theme://assets/css/ie8.css') %}
+                    {% do assets.addCss('theme://assets/css/ie8.css.map') %}
                 {% endif %}
                 {% if browser.getBrowser == 'msie' and browser.getVersion == 9 %}
                     {% do assets.addCss('theme://assets/css/ie9.css') %}
+                    {% do assets.addCss('theme://assets/css/ie9.css.map') %}
                 {% endif %}
         {% endblock %}
         {{ assets.css() }}
@@ -40,9 +43,9 @@
                  {% do assets.addJs('theme://assets/js/ie/html5shiv.js') %}
             {% endif %}
             {% do assets.add('jquery',101) %}
-            {% do assets.addJs('theme://assets/js/jquery.dropotron.min.js') %}
             {% do assets.addJs('theme://assets/js/jquery.scrolly.min.js') %}
             {% do assets.addJs('theme://assets/js/jquery.scrollgress.min.js') %}
+            {% do assets.addJs('theme://assets/js/jquery.panels.min.js') %}
             {% do assets.addJs('theme://assets/js/skel.min.js') %}
             {% do assets.addJs('theme://assets/js/util.js') %}
             {% if browser.getBrowser == 'msie' and browser.getVersion == 8 %}
