--- a/user/themes/tlf/assets/scss/libs/_vars.scss
+++ b/user/themes/tlf/assets/scss/libs/_vars.scss
@@ -23,6 +23,8 @@
 		fg:				#7c8081,
 		border:			transparentize(#7c8081, 0.8),
 
+		main: 			#25a7dd,
+
 		header: (
 			bg:			#fff,
 			fg:			inherit,
