--- a/user/themes/tlf/assets/scss/libs/_utils.scss
+++ b/user/themes/tlf/assets/scss/libs/_utils.scss
@@ -1,41 +1,3 @@
-.hexagon {
-    position: relative;
-	width: 60px;
-	height: 34.64px;
-	background-color: transparent;
-    color: #fff;
-	margin: 17.32px 0;
-	border-left: solid 4px #fff;
-	border-right: solid 4px #fff;
-
-	&:before,
-	&:after {
-		content: "";
-		position: absolute;
-		z-index: 1;
-		width: 42.43px;
-		height: 42.43px;
-		-webkit-transform: scaleY(0.5774) rotate(-45deg);
-		-ms-transform: scaleY(0.5774) rotate(-45deg);
-		transform: scaleY(0.5774) rotate(-45deg);
-		background-color: inherit;
-		left: 4.7868px;
-	}
-
-	&:before {
-	  top: -21.2132px;
-	  border-top: solid 5.6569px #fff;
-	  border-right: solid 5.6569px #fff;
-	}
-
-	&:after {
-	  bottom: -21.2132px;
-	  border-bottom: solid 5.6569px #fff;
-	  border-left: solid 5.6569px #fff;
-	}
-
-    &:hover {
-        background-color: #fff;
-        color: #333;
-    }
+.tright {
+    text-align: right;
 }
