--- a/user/themes/tlf/assets/scss/main.scss
+++ b/user/themes/tlf/assets/scss/main.scss
@@ -651,10 +651,7 @@
 
 		nav {
 			letter-spacing: 0.075em;
-			position: absolute;
-			right: 1.5em;
 			text-transform: uppercase;
-			top: 0.75em;
 
 			ul {
 				li {
@@ -666,7 +663,6 @@
 						font-size: 24px;
 						font-weight: bold;
 						border: none;
-						@include ghostVerticalAlign;
 					}
 
 					&.active,
@@ -690,20 +686,48 @@
 			color: _palette(header, alt-fg);
 			padding: 2em 2.5em;
 			position: absolute;
-
-			nav {
-				right: 2.5em;
-				top: 1.75em;
-			}
 		}
 	}
 
 /* Main Menu */
+	.main-menu-panel-open, .main-menu-panel-close {
+		position: absolute;
+		top: 0;
+		right: 0;
+		border: 0;
+		height: 5.25rem;
+		width: 5.25rem;
+		padding: 1.5rem;
+		text-align: center;
+		svg {
+			position: absolute;
+			top: .875rem;
+    		right: 1.125rem;
+		}
+		i {
+			font-size: 2.1rem;
+    		position: relative;
+    		padding: 0.1rem;
+		}
+	}
 
 	#main-menu-panel {
-		height: 100%;
-		width: 100%;
 		background: _palette('main');
+
+		nav {
+			ul > li > a {
+				color: #fff;
+				border: 0;
+			    font-weight: bold;
+				h3 {
+					font-size: 4rem;
+					line-height: 5rem;
+				}
+				p {
+
+				}
+			}
+		}
 	}
 
 /* Banner */
