--- a/user/themes/tlf/templates/partials/header.html.twig
+++ b/user/themes/tlf/templates/partials/header.html.twig
@@ -1,36 +1,104 @@
 <header id="header" class="{{ page.header.header_class }}">
     <h1 id="logo"><a href="{{ base_url_absolute }}">{{ site.logo.text1 }} <span>{{ site.logo.text2 }}</span></a></h1>
-    <a href="#" class="main-menu-panel-toggle"><div class="hexagon"><div class="inner"><i class="fa fa-bars"></i></div></div></a>
-    <div id="main-menu-panel">
-        <a href="#" class="main-menu-panel-toggle"><div class="hexagon alt"><div class="inner"><i class="fa fa-arrow-left"></i></div></div></a>
-        <div class="container">
-            <div class="row">
-                <div class="4u 12u(narrower)">
-                </div>
-                <div class="4u 12u(narrower)">
-                    <nav id="nav">
-                        <ul>
-                            {% for page in pages.children %}
-                                {% if page.visible %}
-                                    {% set current_page = (page.active or page.activeChild) ? 'current' : '' %}
-                                    <li class="{{ current_page }}">
-                                    <a href="{{ page.url }}">
-                                      {{ page.menu }}
-                                    </a>
-                                    </li>
-                                {% endif %}
-                            {% endfor %}
-                            {% for mitem in site.menu %}
-                                <li>
-                                <a href="{{ mitem.link }}">{{ mitem.text }}</a>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </nav>
-                </div>
-                <div class="4u 12u(narrower)">
-                </div>
+    <a class="main-menu-panel-open">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Hexagon" x="0px" y="0px" width="50px" height="56px" viewBox="0 0 48 54" xml:space="preserve" enable-background="new 0 0 48 54">
+            <style type="text/css">
+                .hexagon {
+                  fill: white;
+                }
+            </style>
+            <path class="hexagon" d="M48 13.2v27.9L24 54 0 41.1V13.2C6 10.7 23.9 0 23.9 0L48 13.2z"></path>
+        </svg>
+        <i class="fa fa-bars"></i>
+    </a>
+</header>
+
+<div id="main-menu-panel">
+    <div class="row">
+        <div class="4u 12u(narrower)">
+        </div>
+        <div class="4u 12u(narrower)">
+            <nav id="nav">
+                <ul>
+                    {% for page in pages.children %}
+                        {% if page.visible %}
+                            {% set current_page = (page.active or page.activeChild) ? 'current' : '' %}
+                            <li class="{{ current_page }}">
+                                <a href="{{ page.url }}">
+                                    <h3>{{ page.menu }}</h3>
+                                    <p>{{ page.subtitle}}</p>
+                                </a>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+                    {% for mitem in site.menu %}
+                        <li>
+                            <a href="{{ mitem.link }}">{{ mitem.text }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </nav>
+        </div>
+        <div class="4u 12u(narrower)">
+            <a class="main-menu-panel-close">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Hexagon" x="0px" y="0px" width="50px" height="56px" viewBox="0 0 48 54" xml:space="preserve" enable-background="new 0 0 48 54">
+                    <style type="text/css">
+                        .hexagon {
+                          fill: white;
+                        }
+                    </style>
+                    <path class="hexagon" d="M48 13.2v27.9L24 54 0 41.1V13.2C6 10.7 23.9 0 23.9 0L48 13.2z"></path>
+                </svg>
+                <i class="fa fa-arrow-left"></i>
+            </a>
+            <div class="contact">
+            <h4>Get in <strong>Touch.</strong></h4>
+
+            <div class="visually-hidden" vocab="http://schema.org/" typeof="Organization">
+
+              <span property="name">The Little Festival Ltd</span>
+              <span property="email">thelittlefestivaluk@gmail.com</span>
+              <span property="url">https://www.thelittlefestival.co.uk</span>
+              <img property="logo" src="/user/themes/tlf/images/logo.png" alt="logo">
+
+              <address property="address" typeof="PostalAddress">
+                <span property="streetAddress">Margarethenstrasse 87</span>
+                <span property="postalCode">4053</span>
+                <span property="addressLocality">Basel Switzerland</span>
+              </address>
+
             </div>
+            <ul class="contact-data">
+                <li>
+                    <a href="mailto:thelittlefestivaluk@gmail.com">thelittlefestivaluk@gmail.com</a>
+                </li>
+                <li>
+                    <a href="tel:+41612711286">+41 61 271 12 86</a>
+                </li>
+                <li>
+                    <a href="https://goo.gl/maps/ucOJX" target="_blank">
+                        <address>
+                        The Little Festival Ltd<br>
+                        Margarethenstrasse 87<br>
+                        4053 Basel<br>
+                        Switzerland
+                        </address>
+                    </a>
+                </li>
+            </ul>
+            <ul class="meta" itemscope="" itemtype="http://schema.org/SiteNavigationElement">
+                <li>
+                    <a itemprop="url" href="/en/landing/openspace">
+                        <h4 itemprop="name">Open Space</h4>
+                    </a>
+                </li>
+                <li>
+                    <a itemprop="url" href="/en/meta/sitenotice">
+                        <h4 itemprop="name">Site Notice</h4>
+                    </a>
+                </li>
+            </ul>
+          </div>
         </div>
     </div>
-</header>
+</div>
