--- a/user/themes/tlf/assets/scss/libs/_vars.scss
+++ b/user/themes/tlf/assets/scss/libs/_vars.scss
@@ -22,6 +22,7 @@
 		bg:				#f3f6fa,
 		fg:				#7c8081,
 		border:			transparentize(#7c8081, 0.8),
+		main: 			#25a7dd,
 
 		header: (
 			bg:			#fff,
