--- a/user/themes/tlf/templates/modular/banner.html.twig
+++ b/user/themes/tlf/templates/modular/banner.html.twig
@@ -1,6 +1,7 @@
 <section id="banner">
     <div class="inner">
         <header>
+            <img src="@theme://{{ page.header.image }}" alt="{{ page.title }}">
             <h2>{{ page.header.title }}</h2>
         </header>
         {{ content }}
