--- a/user/themes/tlf/assets/css/main.css
+++ b/user/themes/tlf/assets/css/main.css
@@ -1397,35 +1397,36 @@ input[type="reset"],
     margin: 0; }
     #header h1 span {
       font-weight: 300; }
-  #header a.menuToggle {
+  #header a.main-menu-toggle {
     border: 0;
     position: absolute;
     right: 0.9rem;
     top: 0.9rem;
-    pointer: cursor; }
-    #header a.menuToggle i {
-      pointer: inherit;
-      position: absolute;
-      padding: 0.8rem 0.7rem;
-      top: 0;
-      font-size: 2rem; }
+    z-index: 2000; }
+    #header a.main-menu-toggle svg {
+      position: absolute; }
+  #header #navPanel {
+    color: #fff;
+    min-height: 100%;
+    min-width: 100%;
+    background: #25a7dd; }
   #header nav {
-    text-transform: uppercase;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: #25a7dd;
-    z-index: 10; }
+    z-index: 10;
+    text-transform: uppercase; }
     #header nav ul li {
       display: inline-block;
-      margin-left: 1.5em; }
+      margin-left: 1.5em;
+      width: 100%; }
       #header nav ul li > a {
         color: #fff;
-        font-size: 24px;
-        font-weight: bold;
         border: none; }
+        #header nav ul li > a h3 {
+          font-size: 4rem;
+          line-height: 4rem;
+          font-weight: bold;
+          margin: 0; }
+        #header nav ul li > a p {
+          margin: 0; }
       #header nav ul li.active > a, #header nav ul li:hover > a {
         -moz-transition: all 0.2s ease-in-out;
         -webkit-transition: all 0.2s ease-in-out;
@@ -1687,8 +1688,88 @@ ul.buttons {
       padding: 0; }
 
 /* Nav */
-#navPanel {
-  display: none; }
+.c-hamburger {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  width: 50px;
+  height: 56px;
+  font-size: 0;
+  text-indent: -9999px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
+  border: none;
+  cursor: pointer;
+  transition: background 0.3s; }
+
+.c-hamburger:focus {
+  outline: none; }
+
+.c-hamburger span {
+  display: block;
+  position: absolute;
+  top: 26px;
+  left: 10px;
+  right: 10px;
+  height: 4px;
+  background: #333; }
+
+.c-hamburger span::before,
+.c-hamburger span::after {
+  position: absolute;
+  display: block;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #333;
+  content: ""; }
+
+.c-hamburger span::before {
+  top: -10px; }
+
+.c-hamburger span::after {
+  bottom: -10px; }
+
+/**
+ * Style 2
+ *
+ * Hamburger to "x" (htx). Takes on a hamburger shape, bars slide
+ * down to center and transform into an "x".
+ */
+.c-hamburger--htx span {
+  transition: background 0s 0.3s; }
+
+.c-hamburger--htx span::before,
+.c-hamburger--htx span::after {
+  transition-duration: 0.3s, 0.3s;
+  transition-delay: 0.3s, 0s; }
+
+.c-hamburger--htx span::before {
+  transition-property: top, transform; }
+
+.c-hamburger--htx span::after {
+  transition-property: bottom, transform; }
+
+/* active state, i.e. menu open */
+.c-hamburger--htx.is-active span {
+  background: none; }
+
+.c-hamburger--htx.is-active span::before {
+  top: 0;
+  transform: rotate(45deg); }
+
+.c-hamburger--htx.is-active span::after {
+  bottom: 0;
+  transform: rotate(-45deg); }
+
+.c-hamburger--htx.is-active span::before,
+.c-hamburger--htx.is-active span::after {
+  transition-delay: 0s, 0.3s; }
 
 /* Basic */
 body {
