--- a/user/themes/tlf/templates/partials/base.html.twig
+++ b/user/themes/tlf/templates/partials/base.html.twig
@@ -45,7 +45,7 @@
             {% do assets.add('jquery',101) %}
             {% do assets.addJs('theme://assets/js/jquery.scrolly.min.js') %}
             {% do assets.addJs('theme://assets/js/jquery.scrollgress.min.js') %}
-            {% do assets.addJs('theme://assets/js/jquery.panels.min.js') %}
+            {% do assets.addJs('theme://assets/js/jquery.slidereveal.min.js') %}
             {% do assets.addJs('theme://assets/js/skel.min.js') %}
             {% do assets.addJs('theme://assets/js/util.js') %}
             {% if browser.getBrowser == 'msie' and browser.getVersion == 8 %}
