--- a/user/themes/tlf/templates/partials/header.html.twig
+++ b/user/themes/tlf/templates/partials/header.html.twig
@@ -1,6 +1,6 @@
 <header id="header" class="{{ page.header.header_class }}">
     <h1 id="logo"><a href="{{ base_url_absolute }}">{{ site.logo.text1 }} <span>{{ site.logo.text2 }}</span></a></h1>
-    <a href="#" class="menuToggle">
+    <a href="javascript:void(0);" class="main-menu-toggle c-hamburger c-hamburger--htx">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Hexagon" x="0px" y="0px" width="50px" height="56px" viewBox="0 0 48 54" xml:space="preserve" enable-background="new 0 0 48 54">
             <style type="text/css">
                 .hexagon {
@@ -9,35 +9,88 @@
             </style>
             <path class="hexagon" d="M48 13.2v27.9L24 54 0 41.1V13.2C6 10.7 23.9 0 23.9 0L48 13.2z"></path>
         </svg>
-    <i class="fa fa-bars"></i>
+    <span></span>
     </a>
     <div id="navPanel">
-        <nav id="nav">
-            <ul>
-                {% for page in pages.children %}
-                    {% if page.visible %}
-                        {% set current_page = (page.active or page.activeChild) ? 'current' : '' %}
-                        <li class="{{ current_page }}">
-                            <a href="{{ page.url }}">
-                                {{ page.menu }}
-                            </a>
-                        </li>
-                    {% endif %}
-                {% endfor %}
-                {% for mitem in site.menu %}
-                    <li>
-                        <a href="{{ mitem.link }}">{{ mitem.text }}</a>
-                    </li>
-                {% endfor %}
-                <li class="submenu">
-                    <a href="">Submenu</a>
+        <div class="row">
+            <div class="4u 12u(narrower)"></div>
+            <div class="4u 12u(narrower)">
+                <nav id="nav">
                     <ul>
-                        {% for submenu in site.submenu %}
-                            <li><a href="{{ submenu.link }}">{{ submenu.text }}</a></li>
+                        {% for page in pages.children %}
+                            {% if page.visible %}
+                                {% set current_page = (page.active or page.activeChild) ? 'current' : '' %}
+                                <li class="{{ current_page }}">
+                                    <a href="{{ page.url }}">
+                                        <h3>{{ page.menu }}</h3>
+                                        <p>{{ page.subtitle }}</p>
+                                    </a>
+                                </li>
+                            {% endif %}
+                        {% endfor %}
+                        {% for mitem in site.menu %}
+                            <li>
+                                <a href="{{ mitem.link }}">{{ mitem.text }}</a>
+                            </li>
                         {% endfor %}
                     </ul>
-                </li>
-            </ul>
-        </nav>
+                </nav>
+            </div>
+            <div class="4u 12u(narrower)">
+                <div class="contact">
+                    <h4>Get in <strong>Touch.</strong></h4>
+
+                    <div class="visually-hidden" vocab="http://schema.org/" typeof="Organization">
+
+                        <span class="visually-hidden" property="name">THE LITTLE FESTIVAL LTD</span>
+                        <span class="visually-hidden" property="email">team@thelittlefestival.co.uk</span>
+                        <span class="visually-hidden" property="url">http://www.thelittlefestival.co.uk</span>
+                        <img class="visally-hidden" property="logo" src="https://www.thelittlefestival.co.uk/user/themes/tlf/images/logo-small.png" alt="logo">
+
+                        <address class="visually-hidden" property="address" typeof="PostalAddress">
+                        <span property="streetAddress">Margarethenstrasse 87</span>
+                        <span property="postalCode">4053</span>
+                        <span property="addressLocality">Basel Switzerland</span>
+                        </address>
+
+                    </div>
+                    <ul class="contact-data">
+                        <li>
+                            <a href="mailto:hello@wondrous.ch">hello@wondrous.ch</a>
+                        </li>
+                        <li>
+                            <a href="tel:+41612711286">+41 61 271 12 86</a>
+                        </li>
+                        <li>
+                            <a href="https://goo.gl/maps/ucOJX" target="_blank">
+                              <address>
+                                WONDROUS LLC<br>
+                                Margarethenstrasse 87<br>
+                                4053 Basel<br>
+                                Switzerland
+                              </address>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="meta" itemscope="" itemtype="http://schema.org/SiteNavigationElement">
+                        <li>
+                            <a itemprop="url" href="/en/landing/openspace">
+                                <h4 itemprop="name">Open Space</h4>
+                            </a>
+                        </li>
+                        <li>
+                            <a itemprop="url" href="/en/landing/drupal-8">
+                                <h4 itemprop="name">Drupal 8</h4>
+                            </a>
+                        </li>
+                        <li>
+                            <a itemprop="url" href="/en/meta/sitenotice">
+                                <h4 itemprop="name">Site Notice</h4>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </header>
