--- a/user/themes/tlf/templates/modular/bottom.html.twig
+++ b/user/themes/tlf/templates/modular/bottom.html.twig
@@ -3,11 +3,9 @@
         <h2>{{page.header.title}}</h2>
         {{ content }}
     </header>
-    <footer>
-        <ul class="buttons">
-            {% for button in page.header.buttons %}
-                <li><a href="{{ button.url }}" class="button {% if button.class %}{{ button.class }}{% endif %}">{{ button.text }}</a></li>
-            {% endfor %}
-        </ul>
-    </footer>
+    {% if page.header.form %}
+        <section>
+
+        </section>
+    {% endif %}
 </section>
